--- a/_site.yml
+++ b/_site.yml
@@ -5,8 +5,8 @@ navbar:
   left:
   - text: "Home"
     href: index.html
-  - text: "Speed and Distance"
-    href: speed-and-distance.html
+  - text: "Test"
+    href: Practice.html
 output:
   html_document:
     theme: cosmo
